# nftthon-contract

./: Anchor.toml  FAQ-ReactJS  LICENSE  README.MD  package.json  rustc
programs/nft_contest/: Cargo.toml
programs/nft_contest/src/: lib.rs
programs/nft_contest/src/common/: lib.rs  mod.rs
programs/nft_contest/src/instructions/: claim_by_artist.rs  claim_by_contest_owner.rs  claim_by_voter.rs  initialize.rs  launch.rs  mod.rs  submit.rs  vote.rs
programs/nft_contest/src/state/: lib.rs
tests/: nft_contest.ts
